--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.4",
+    "concurrently": "^6.2.1",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue-toast-notification": "3.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
