--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.4",
     "concurrently": "^6.2.1",
+    "cors": "^2.8.5",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
     "vue-toast-notification": "3.0"
