--- a/vercel.json
+++ b/vercel.json
@@ -6,8 +6,8 @@
       "status": 200
     },
     {
-      "src": "/(.*)",
-      "dest": "/$1",
+      "src": "/[^.]+",
+      "dest": "/",
       "status": 200
     }
   ]
