--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
     "vue-toast-notification": "3.0",
-    "vuefire": "^3.1.0"
+    "vuefire": "^3.1.0",
+    "vuetify": "^3.1.14"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
