--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@tinymce/tinymce-vue": "^5.1.0",
+    "@editorjs/checklist": "^1.5.0",
+    "@editorjs/editorjs": "^2.27.0",
+    "@editorjs/embed": "^2.5.3",
+    "@editorjs/header": "^2.7.0",
+    "@editorjs/image": "^2.8.1",
+    "@editorjs/list": "^1.8.0",
+    "@editorjs/raw": "^2.4.0",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.4",
@@ -24,6 +30,9 @@
     "vuetify": "^3.1.14"
   },
   "devDependencies": {
+    "@editorjs/link": "^2.5.0",
+    "@editorjs/quote": "^2.5.0",
+    "@editorjs/simple-image": "^1.5.1",
     "@rushstack/eslint-patch": "^1.2.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^3.0.0",
