--- a/package.json
+++ b/package.json
@@ -11,28 +11,23 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@editorjs/checklist": "^1.5.0",
-    "@editorjs/editorjs": "^2.27.0",
-    "@editorjs/embed": "^2.5.3",
-    "@editorjs/header": "^2.7.0",
-    "@editorjs/image": "^2.8.1",
-    "@editorjs/list": "^1.8.0",
-    "@editorjs/raw": "^2.4.0",
+    "@vueup/vue-quill": "^1.2.0",
     "axios": "^1.3.5",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.4",
     "concurrently": "^6.2.1",
+    "crypto-js": "^4.2.0",
     "firebase": "^9.19.1",
-    "vue": "^3.2.47",
+    "pinia": "^2.1.7",
+    "vee-validate": "^4.12.6",
+    "vue": "^3.2.41",
     "vue-router": "^4.1.6",
     "vue-toast-notification": "3.0",
     "vuefire": "^3.1.0",
-    "vuetify": "^3.1.14"
+    "vuetify": "^3.1.14",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@editorjs/link": "^2.5.0",
-    "@editorjs/quote": "^2.5.0",
-    "@editorjs/simple-image": "^1.5.1",
     "@rushstack/eslint-patch": "^1.2.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^3.0.0",
@@ -42,6 +37,7 @@
     "eslint-plugin-vue": "^9.9.0",
     "jsdom": "^21.1.0",
     "prettier": "^2.8.4",
+    "sass": "^1.75.0",
     "vite": "^4.1.4",
     "vitest": "^0.29.1"
   }
